<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/phone_et_phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_phoneNumber_hint"
        android:inputType="phone" />

    <Button
        android:id="@+id/phone_bt_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_call" />
    
    
    <TextView
        android:id="@+id/tv_phone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:autoLink="all"
        android:text="@string/phone_link" />

</LinearLayout>